namespaces/live.cloud-platform.service.justice.gov.uk/monitoring-psc-app-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "monitoring-psc-app-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ds-court-team"
    cloud-platform.justice.gov.uk/application: "Monitoring Predicting Short Custody App"
    cloud-platform.justice.gov.uk/owner: "Probation and Electronic Monitoring: michael.hodge@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/monitoring-psc-app"
    cloud-platform.justice.gov.uk/team-name: "monitoring-psc-app"
    cloud-platform.justice.gov.uk/review-after: ""
